@@ -1657,6 +1657,13 @@ public class jEdit
 				buffer.getStringProperty(Buffer.ENCODING));
 		}
 
+		String path = buffer.getSymlinkPath();
+		if((VFSManager.getVFSForPath(path).getCapabilities()
+			& VFS.CASE_INSENSITIVE_CAP) != 0)
+		{
+			path = path.toLowerCase();
+		}
+		bufferHash.remove(path);
 		removeBufferFromList(buffer);
 		buffer.close();
 		DisplayManager.bufferClosed(buffer);
